Nuevo efecto en el menu

--- a/index.html
+++ b/index.html
@@ -19,13 +19,32 @@
 
         <nav class="navbar">
             <ul class="content__navbar">
-                <li><a href="./index.html">Inicio</a></li>
-                <li><a href="#">Quienes Somos</a></li>
-                <li><a href="./pages/productos.html">Productos</a></li>
-                <li><a href="#">Como Comprar</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li><a class="menu inicio" href="#" data-title="Inicio"><span>
+                    <span>Inicio</span>
+                  </span></a></li>
+                <li><a class="menu quienes" href="#" data-title="Quienes Somos">
+                  <span>
+                    <span>Quienes Somos</span>
+                  </span>
+                  </a></li>
+                  <li><a class="menu productos" href="./pages/productos.html" data-title="Productos">
+                  <span>
+                    <span>Productos</span>
+                  </span>
+                  </a></li>                    
+                  <li><a class="menu comprar" href="#" data-title="Como Comprar">
+                    <span>
+                      <span>Como Comprar</span>
+                    </span>
+                    </a></li>
+                    <li><a class="menu contacto" href="#" data-title="Contacto">
+                  <span>
+                    <span>Contacto</span>
+                  </span>
+                  </a></li>
             </ul>
         </nav>
+
         <main class="principal">
             <div class="container">
                 <div class="card">
