modificacion del logo

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -13,7 +13,7 @@
 
         <header class="header">
             <div class="header__content">
-                <img src="../assets/images/logo definitivo Mara Bollo 2-2.jpg" alt="logo de la pasteleria" />         
+                <img src="../assets/images/logo_definitivo_Mara_Bollo-2-removebg.png" alt="logo de la pasteleria" />         
             </div>
         </header>
 
