Modificacion para segunda entrega

--- a/pages/mesas-tematicas.html
+++ b/pages/mesas-tematicas.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/bootstrap.min.css" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="../css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-    <script src="./js/bootstrap.bundle.min.js"></script>
+    <script src="../js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/d85f442e42.js" crossorigin="anonymous"></script>
     <title>Mara Bollo - Pasteleria Creativa</title>
   </head>
@@ -16,7 +16,7 @@
     <header class="header">
       <div class="header__content">
         <img
-          src="./assets/images/logo_definitivo_Mara_Bollo-2-removebg.webp"
+          src="../assets/images/logo_definitivo_Mara_Bollo-2-removebg.webp"
           alt="logo de la pasteleria"
         />
       </div>
@@ -41,12 +41,12 @@
               <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#"
+                    <a class="nav-link active" aria-current="page" href="../index.html"
                       >Inicio</a
                     >
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="./pages/quienes-somos.html">Quienes Somos</a>
+                    <a class="nav-link active" href="../pages/quienes-somos.html">Quienes Somos</a>
                   </li>
                   <li class="nav-item dropdown">
                     <a
@@ -63,18 +63,18 @@
                       class="dropdown-menu" style="background-color: rgba(210, 205, 185, 0.993);"
                       aria-labelledby="navbarDropdownMenuLink"
                     >
-                      <li><a class="dropdown-item" href="./pages/box-dulces.html">Box Dulces</a></li>
-                      <li><a class="dropdown-item" href="./pages/mesas-tematicas.html">Mesas Tematicas</a></li>
-                      <li><a class="dropdown-item" href="./pages/tortas-cumpleaños.html">Tortas Cumpleaños</a></li> 
-                      <li><a class="dropdown-item" href="./pages/tortas-clasicas.html">Tortas Clasicas</a></li> 
-                      <li><a class="dropdown-item" href="./pages/desayuno.html">Desayunos</a></li> 
+                      <li><a class="dropdown-item" href="../pages/box-dulces.html">Box Dulces</a></li>
+                      <li><a class="dropdown-item" href="../pages/mesas-tematicas.html">Mesas Tematicas</a></li>
+                      <li><a class="dropdown-item" href="../pages/tortas-cumpleaños.html">Tortas Cumpleaños</a></li> 
+                      <li><a class="dropdown-item" href="../pages/tortas-clasicas.html">Tortas Clasicas</a></li> 
+                      <li><a class="dropdown-item" href="../pages/desayuno.html">Desayunos</a></li>  
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="./pages/como-comprar.html">Como Comprar</a>
+                    <a class="nav-link active" href="../pages/como-comprar.html">Como Comprar</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="./pages/contacto.html">Contacto</a>
+                    <a class="nav-link active" href="../pages/contacto.html">Contacto</a>
                   </li>
                 </ul>
               </div>
@@ -87,28 +87,28 @@
         <div class="row">
           <div class="col-md-3 col-sm-6 py-2">
             <div class="card card-block">
-              <img src="./assets/images/box tematicas/box 2.webp" alt="box tematica">
-              <h5 class="card-title mt-3 mb-3 text-center">Box Tematicas</h5>
+              <img src="../assets/images/mesas tematicas/mesa 1.webp" alt="mesa 1">
+              <h5 class="card-title mt-3 mb-3 text-center">Baby Shower</h5>
             </div>
           </div>
           <div class="col-md-3 col-sm-6 py-2">
             <div class="card card-block">
-              <img src="./assets/images/mesas tematicas/mesa 4.webp" alt="mesas tematicas">
-              <h5 class="card-title  mt-3 mb-3 text-center">Mesas Tematicas</h5>
+              <img src="../assets/images/mesas tematicas/mesa 2.webp" alt="mesa 2">
+              <h5 class="card-title mt-3 mb-3 text-center">Cumpleaños</h5>
             </div>
           </div>
           <div class="col-md-3 col-sm-6 py-2">
             <div class="card card-block">
-              <img src="./assets/images/tortas clasicas/pastafrola.webp" alt="tortas clasicas">
-              <h5 class="card-title  mt-3 mb-3 text-center">Tortas Clasicas</h5></div>
+              <img src="../assets/images/mesas tematicas/mesa 3.webp" alt="mesa 3">
+              <h5 class="card-title mt-3 mb-3 text-center">Fiesta de 15 años</h5>
             </div>
+          </div>
           <div class="col-md-3 col-sm-6 py-2">
             <div class="card card-block">
-              <img src="./assets/images/cumpleaños/cumple 1.webp" alt="tortas">
-              <h5 class="card-title  mt-3 mb-3 text-center">Tortas Cumpleaños</h5>
+              <img src="../assets/images/mesas tematicas/mesa 4.webp" alt="mesa 4">
+              <h5 class="card-title mt-3 mb-3 text-center">Casamiento</h5>
             </div>
-          </div>    
-        </div>
+          </div>
     </div>
     <div class="my-5">
       <footer class="text-center text-lg-start" style="background-color: rgb(142, 217, 192);">
