--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
                       class="dropdown-menu" style="background-color: rgba(210, 205, 185, 0.993);"
                       aria-labelledby="navbarDropdownMenuLink"
                     >
-                      <li><a class="dropdown-item" href="./pages/box-dulces.html">Box Dulces</a></li>
-                      <li><a class="dropdown-item" href="./pages/mesas-tematicas.html">Mesas Tematicas</a></li>
-                      <li><a class="dropdown-item" href="./pages/tortas-cumpleaños.html">Tortas Cumpleaños</a></li> 
-                      <li><a class="dropdown-item" href="./pages/tortas-clasicas.html">Tortas Clasicas</a></li> 
-                      <li><a class="dropdown-item" href="./pages/desayuno.html">Desayunos</a></li> 
+                      <li><a class="dropdown-item" href="#">Box Dulces</a></li>
+                      <li><a class="dropdown-item" href="#">Mesas Tematicas</a></li>
+                      <li><a class="dropdown-item" href="#">Tortas Cumpleaños</a></li> 
+                      <li><a class="dropdown-item" href="#">Tortas Clasicas</a></li> 
+                      <li><a class="dropdown-item" href="#">Desayunos</a></li> 
                     </ul>
                   </li>
                   <li class="nav-item">
