--- a/pages/productos.html
+++ b/pages/productos.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Pagina con productos de excelente calidad como por ejemplo, tortas, desayunos, tartas dulces, huevos de pascua" />
+    <meta name="keywords" content="pasteleria, tortas de cumpleaños, desayunos para regalar, huevos de pascua, pastafrola, mini tortas "/>
     <title>Mara Bollo Pasteleria Creativa - Productos</title>
-    <link rel="stylesheet" href="../style.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../styles/style.css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 </head>
 <body>
     <div class="grid">
 
         <header class="header">
             <div class="header__content">
-                <img src="../assets/images/logo definitivo Mara Bollo 2-2.jpg" alt="logo de la pasteleria" />         
+                <img src="../assets/images/logo_definitivo_Mara_Bollo-2-removebg.webp" alt="logo de la pasteleria" />         
             </div>
         </header>
 
@@ -43,27 +45,27 @@
         <main class="principal">
             <div class="container">
                 <div class="card">
-                    <img src="../assets/images/box tematicas.jpeg" alt="box tematicas" />
+                    <img src="../assets/images/box tematicas.webp" alt="box tematicas" />
                     <h3>Box Tematicas</h3>
                 </div>
 
                 <div class="card">
-                    <img src="../assets/images/mesas tematicas.jpeg" alt="mesas tematicas" />
+                    <img src="../assets/images/mesas tematicas.webp" alt="mesas tematicas" />
                     <h3>Mesas Tematicas</h3>
                 </div>
 
                 <div class="card">
-                    <img src="../assets/images/pastafrola.jpeg" alt="tartas dulces" />
+                    <img src="../assets/images/pastafrola.webp" alt="tartas dulces" />
                     <h3>Tartas Dulces</h3>
                 </div>
 
                 <div class="card">
-                    <img src="../assets/images/huevos de pascua.jpeg" alt="huevos de pascua" />
+                    <img src="../assets/images/huevos de pascua.webp" alt="huevos de pascua" />
                     <h3>Huevos de Pascua</h3>
                 </div>
 
                 <div class="card">
-                    <img src="../assets/images/lingotes.jpeg" alt="lingotes" />
+                    <img src="../assets/images/lingotes.webp" alt="lingotes" />
                     <h3>Lingotes</h3>
                 </div>
             </div>
@@ -74,8 +76,8 @@
             <h3>Redes Sociales</h3>
             <div class="redes">
                 <ul>
-                    <li><a href="https://www.facebook.com/Pasteler%C3%ADa-Mara-Bollo-156683028263073" target="_blank"><img src="../assets/images/facebook.png" alt="logo facebook"></a></li>
-                    <li><a href="https://www.instagram.com/marabollopasteleriacreativa/" target="_blank"><img src="../assets/images/instagram.png" alt="logo instagram"></a></li>
+                    <li><a href="https://www.facebook.com/Pasteler%C3%ADa-Mara-Bollo-156683028263073" target="_blank"><img src="../assets/images/facebook.webp" alt="logo facebook"></a></li>
+                    <li><a href="https://www.instagram.com/marabollopasteleriacreativa/" target="_blank"><img src="../assets/images/instagram.webp" alt="logo instagram"></a></li>
                 </ul>
             </div>
             <div>
