--- a/pages/como-comprar.html
+++ b/pages/como-comprar.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <script src="../js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/d85f442e42.js" crossorigin="anonymous"></script>
-    <title>Mara Bollo - Pasteleria Creativa</title>
+    <title>Mara Bollo - Pasteleria Creativa - Como comprar</title>
   </head>
 
   <body>
@@ -86,13 +86,14 @@
           <h1 class="clear-both">Como Comprar</h1>
         </div>
       </div>
-      <div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore velit eligendi molestiae libero aliquam placeat, et suscipit iste ipsum molestias consectetur, unde quaerat! Laudantium vitae at repudiandae quibusdam ipsam, sapiente eligendi in doloribus consequuntur numquam earum cupiditate magnam, omnis voluptate?</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa exercitationem perferendis quisquam aperiam velit corporis, porro omnis, libero cumque ex quia iste quam culpa.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit exercitationem voluptatem sequi veritatis recusandae perspiciatis.</p>
-        <p>Lorem ipsum dolor sit.</p>
-      </div>
-
+      <ol class="list-group list-group-numbered">
+        <li class="list-group-item" style="background-color: rgba(210, 205, 185, 0.993);">Elige el producto que deseas comprar.</li>
+        <li class="list-group-item" style="background-color: rgba(210, 205, 185, 0.993);">Comunicate con nostros por telefono para confirmar la disponibilidad.</li>
+        <li class="list-group-item" style="background-color: rgba(210, 205, 185, 0.993);">Informanos si queres alguna versión especial.</li>
+        <li class="list-group-item" style="background-color: rgba(210, 205, 185, 0.993);">Te informaremos el tiempo de demora de su solicitud.</li>
+        <li class="list-group-item" style="background-color: rgba(210, 205, 185, 0.993);">Informar si lo retiran por nuestro domicilio o necesitan que se lo enviemos</li>
+        <li class="list-group-item" style="background-color: rgba(210, 205, 185, 0.993);">Una vez llegue el dia, puedes acercarte a nuestro domicilio el dia y horario que nos informaste, a retirar tu producto.</li>
+      </ol>
     </div>
     <div class="my-5">
       <footer class="text-center text-lg-start" style="background-color: rgb(142, 217, 192);">
