--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -87,10 +87,8 @@
         </div>
       </div>
       <div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore velit eligendi molestiae libero aliquam placeat, et suscipit iste ipsum molestias consectetur, unde quaerat! Laudantium vitae at repudiandae quibusdam ipsam, sapiente eligendi in doloribus consequuntur numquam earum cupiditate magnam, omnis voluptate?</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa exercitationem perferendis quisquam aperiam velit corporis, porro omnis, libero cumque ex quia iste quam culpa.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit exercitationem voluptatem sequi veritatis recusandae perspiciatis.</p>
-        <p>Lorem ipsum dolor sit.</p>
+        <p>Mara Bollo - Pasteleria Creativa es un emprendimiento iniciado en el año 2017, inspirado en una Pastelería Artesanal contemporánea, que en un principio se especializó únicamente en tortas y huevos de pascua, pero hoy, cuenta con una gran variedad de Minicakes, Brownies, Alfajores, Macarons, Cup Cakes y más</p>
+        <p>No dejes de enviarnos tus consultas.</p>
       </div>
 
     </div>
